crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_auth_recovery_connection_refused.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│                                                                              │
└───────────────┌Authentication Error──────────────────────────┐───────────────┘
┌Status─────────│Unable to connect to the Splunk server.       │───────────────┐
│Press Enter to │                                              │               │
└───────────────│Next Steps:                                   │───────────────┘
┌Results────────│• Verify the Splunk server is running         │───────────────┐
│               │• Check the base URL in your profile          │.              │
│               │• Ensure network connectivity to the server   │               │
│               │                                              │               │
│               │───                                           │─────────────┐ │
│               │                                              │0/5] 0%      │ │
│               │Keybindings:                                  │file         │ │
│               └──────────────────────────────────────────────┘ction        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Esc:Close| Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit       │
└──────────────────────────────────────────────────────────────────────────────┘
