crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_auth_recovery_invalid_credentials.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│                                                                              │
└───────────────┌Authentication Error──────────────────────────┐───────────────┘
┌Status─────────│Invalid credentials detected. The username,   │───────────────┐
│Press Enter to │password, or API token is incorrect.          │               │
└───────────────│                                              │───────────────┘
┌Results────────│Next Steps:                                   │───────────────┐
│               │• Check your username and password            │.              │
│               │• Verify your API token is valid              │               │
│               │• Ensure your account has not been locked     │               │
│               │                                              │               │
│               │───                                           │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Esc:Close | Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit      │
└──────────────────────────────────────────────────────────────────────────────┘
