crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_auth_recovery_session_expired.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [NAV] | [?] Unknown                                       │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│                                                                              │
└───────────────┌Authentication Error──────────────────────────┐───────────────┘
┌Status─────────│Your session has expired due to inactivity.   │───────────────┐
│Press Enter to │                                              │               │
└───────────────│Next Steps:                                   │───────────────┘
┌Results────────│• Re-authenticate with your credentials       │───────────────┐
│               │• Consider using an API token for persistent  │.              │
│               │sessions                                      │               │
│               │                                              │               │
│               │───                                           │─────────────┐ │
│               │                                              │0/5] 0%      │ │
│               │Keybindings:                                  │file         │ │
│               └──────────────────────────────────────────────┘ction        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[NAV]  Shift+Tab:Prev  | Esc:Close| Enter:Run Ctrl+e:Export ...| ?:Help | q:Qu│
└──────────────────────────────────────────────────────────────────────────────┘
