crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_auth_recovery_timeout.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [NAV] | [?] Unknown                                       │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│                                                                              │
└───────────────┌Authentication Error──────────────────────────┐───────────────┘
┌Status─────────│Connection timed out while authenticating.    │───────────────┐
│Press Enter to │                                              │               │
└───────────────│Next Steps:                                   │───────────────┘
┌Results────────│• Check network connectivity                  │───────────────┐
│               │• Verify the Splunk server is responsive      │.              │
│               │• Consider increasing the timeout setting in  │               │
│               │your profile                                  │               │
│               │                                              │─────────────┐ │
│               │───                                           │0/5] 0%      │ │
│               │                                              │file         │ │
│               └──────────────────────────────────────────────┘ction        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[NAV] Esc:Close| Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit │
└──────────────────────────────────────────────────────────────────────────────┘
