crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_confirm_cancel_popup.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown                                               │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────────────────────────┐
│Sel  SID ↑                    Status          Duration   Results    Events    │
│[ ]  scheduler_┌Confirm Cancel────────────────────────────────┐     500       │
│[ ]  admin_sear│ Cancel job scheduler_admin_search_1234567890?│     2000      │
│               │                     (y/n)                    │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │─────────────┐ │
│               │                                              │0/5] 0%      │ │
│               │                                              │file         │ │
│               └──────────────────────────────────────────────┘ction        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Shift+Tab:Prev  | Esc:Close| r:Refresh /:Filter s:Sort a:Auto| ?:Help | q:Qui│
└──────────────────────────────────────────────────────────────────────────────┘
