crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_confirm_delete_popup.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown                                               │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────────────────────────┐
│Sel  SID ↑                    Status          Duration   Results    Events    │
│[ ]  scheduler_┌Confirm Delete────────────────────────────────┐     500       │
│[ ]  admin_sear│   Delete job admin_search_9876543210? (y/n)  │     2000      │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │─────────────┐ │
│               │                                              │0/5] 0%      │ │
│               │                                              │file         │ │
│               └──────────────────────────────────────────────┘ction        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Shift+Tab:Prev  | Esc:Close| r:Refresh /:Filter s:Sort a:Auto| ?:Help | q:Qui│
└──────────────────────────────────────────────────────────────────────────────┘
