crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_connection_diagnostics_failure.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [NAV] | [?] Unknown                                       │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│                                                                              │
└───────────────┌Connection Diagnostics────────────────────────┐───────────────┘
┌Status─────────│✗ Reachability (5ms): Connection refused:     │───────────────┐
│Press Enter to │localhost:8089                                │               │
└───────────────│○ Authentication                              │───────────────┘
┌Results────────│○ TLS Certificate                             │───────────────┐
│               │                                              │.              │
│               │Status: ✗ FAIL                                │               │
│               │                                              │               │
│               │Remediation:                                  │─────────────┐ │
│               │• Verify the Splunk server is running         │0/5] 0%      │ │
│               │• Check the base URL in your profile          │file         │ │
│               └──────────────────────────────────────────────┘ction        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[NAV] Esc:Close| Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit │
└──────────────────────────────────────────────────────────────────────────────┘
