crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_connection_diagnostics_success.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [NAV] | [?] Unknown                                       │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│                                                                              │
└───────────────┌Connection Diagnostics────────────────────────┐───────────────┘
┌Status─────────│✓ Reachability (45ms)                         │───────────────┐
│Press Enter to │✓ Authentication                              │               │
└───────────────│✓ TLS Certificate                             │───────────────┘
┌Results────────│                                              │───────────────┐
│               │Server: splunk-server (v9.0.0, a1b2c3d)       │.              │
│               │Mode: standalone                              │               │
│               │                                              │               │
│               │Status: ✓ PASS                                │─────────────┐ │
│               │                                              │0/5] 0%      │ │
│               │Press Enter to close                          │file         │ │
│               └──────────────────────────────────────────────┘ction        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[NAV]  Shift+Tab:Prev  | Esc:Close| Enter:Run Ctrl+e:Export ...| ?:Help | q:Qu│
└──────────────────────────────────────────────────────────────────────────────┘
