crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_help_popup.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown                                               │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────────────────────────┐
│                     No jobs loaded. Press 'r' to refresh.                    │
│               ┌Help──────────────────────────────────────────┐               │
│               │Global Keys:                                  ↑               │
│               │  ?               Help                        █               │
│               │  q               Quit                        ║               │
│               │  Ctrl+Q          Quit (global)               ║               │
│               │  Tab             Next screen                 ║               │
│               │  Shift+Tab       Previous screen             ║               │
│               │  Ctrl+Tab        Next focus                  ║               │
│               │  Ctrl+Shift+Tab  Previous focus              ║               │
│               │  Ctrl+c          Copy to clipboard           ║               │
│               │                                              ↓               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next Screen | Shift+Tab:Previous Screen | r:Refresh ...| ?:Help | q:Quit │
└──────────────────────────────────────────────────────────────────────────────┘
