crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_help_popup_cluster_screen.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Cluster | [?] Unknown                                            │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Cluster Information───────────────────────────────────────────────────────────┐
│                 No cluster info loaded. Press 'r' to refresh.                │
│               ┌Help - Cluster────────────────────────────────┐               │
│               │Cluster Screen:                               ↑               │
│               │  r               Refresh cluster info        █               │
│               │  p               Toggle peers view           ║               │
│               │  j/k or Up/Down  Navigate peers list         ║               │
│               │  Ctrl+c          Copy cluster ID             ║               │
│               │  Ctrl+e          Export cluster info         ║               │
│               │                                              ║               │
│               │Global Keys:                                  ║─────────────┐ │
│               │  ?               Help                        ║0/5] 0%      │ │
│               │  Ctrl+P          Command palette             ↓file         │ │
│               └──────────────────────────────────────────────┘ction        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Esc:Close| r:Refresh p:Peers j/k or Up/Down:Navigate ...| ?:Help | q:Quit     │
└──────────────────────────────────────────────────────────────────────────────┘
