crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_help_popup_indexes_screen.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Indexes | [?] Unknown                                            │
│ |                                                                            │
└────────┌Help - Indexes──────────────────────────────────────────────┐────────┘
┌Indexes─│Indexes Screen:                                             ↑────────┐
│        │  r               Refresh indexes                           █        │
│        │  Enter           View index details                        ║        │
│        │  j/k or Up/Down  Navigate list                             ║        │
│        │  Ctrl+c          Copy selected index name                  ║        │
│        │  Ctrl+e          Export indexes                            ║        │
│        │  L               Load more indexes                         ║        │
│        │  c               Create new index                          ║        │
│        │  d               Delete selected index                     ║        │
│        │  m               Modify selected index                     ║        │
│        │                                                            ║        │
│        │Global Keys:                                                ║        │
│        │  ?               Help                                      ║        │
│        │  Ctrl+P          Command palette                           ║        │
│        │  q               Quit                                      ║        │
│        │  Ctrl+Q          Quit (global)                             ↓        │
└────────└────────────────────────────────────────────────────────────┘────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Esc:Close | r:Refresh Enter:Details j/k or Up/Down:Navigate ...| ?:Help | q:Qu│
└──────────────────────────────────────────────────────────────────────────────┘
